Adjust GraalVM build